# meteor

./: .dockerignore  .env.example  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  DOC.md  Dockerfile  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  run_on_file.py  setup.cfg
.github/workflows/: build.yml  lint_and_test.yml  pipeline.yml  publish.yml
diff/: README.md  evaluate_current_version.py  run_prev_diff.py
k8s/: meteor.yml
k8s/prod/: meteor.yml
k8s/stage/: meteor.yml
language/: pytextcat.py  util.py
language/data/lm/: en.lm  en.wm  nb.lm  nb.wm  nn.lm  nn.wm  se.lm  se.wm  sma.lm  sma.wm  smj.lm  smj.wm
metadata_extract/: alto_utils.py  author_name.py  candidate.py  finder.py  infopage.py  init_files.py  llm_extractor.py  metadata.py  meteor.py  meteor_document.py  models.py  page.py  registry.py  resource_loader.py  text.py
metadata_extract/data/txt/: doc_type_mapping.json  doc_type_mapping_no_en.json  info_page_keywords.json  labels.json  stopwords.json
registry/: createdb.py  requirements.txt  script.sh
src/: settings.py  util.py
src/routes/: extract.py
static/css/: style.css
static/js/: dragAndDrop.js
templates/: doc.html  index.html
test/: pytest.ini  requirements.txt  test_alto.py  test_infopage.py  test_names.py  test_pdf.py  test_pdf_llm.py  test_settings.py  test_text.py
test/resources/: pdf_report_llm_response.json
test/resources/alto_report/: alto_report_0001.xml  alto_report_0002.xml
