[metadata]
name = metadata_extract
version = 1.0.0

[options]
packages = metadata_extract
zip_safe = True
include_package_data = True
install_requires =
    pymupdf==1.21.1
    python-dateutil==2.8.1
    dateparser==1.1.6
    regex==2023.5.5
    langdetect==1.0.9

[options.package_data]
metadata_extract.data.txt = *.json
